# LLM4OSC

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: few_shot_examples.json  generate_train.py  score_intent.py  score_track_c.py  test_golden.py  test_golden_nl.py  test_golden_nl_paraphrase.py
benchmarks/golden/: bypass_on.json  freq_1000.json  freq_440.json  gain_clamp.json  gain_full.json  gain_half.json  gain_zero.json  mute_on.json  pan_center.json  pan_left.json  pan_right.json  record_start.json  record_stop.json  tempo_120.json  tempo_60.json  transport_start.json  transport_stop.json  unmute_on.json  volume_30pct.json
benchmarks/golden_nl/: nl_freq_440.json  nl_gain_50pct.json  nl_pan_center.json  nl_record_start.json  nl_tempo_120.json  nl_transport_start.json  nl_transport_stop.json  nl_volume_30pct.json
benchmarks/golden_nl_paraphrase/: para_freq_440.json  para_gain_50pct.json  para_pan_center.json  para_record_start.json  para_tempo_120.json  para_transport_start.json  para_transport_stop.json  para_volume_30pct.json
llm4osc/: __init__.py  cli.py  llm.py  models.py  profile.py  prompt.py  resolver.py  retrieval.py  scorecard.py  serve.py  slots.py  training_data.py
schemas/: intent_schema_v1.json  profile_schema_v1.json
scripts/: osc_listen.py
tests/: test_llm.py  test_llm_refine.py  test_profile.py  test_resolver.py  test_serve.py  test_slots.py  test_training_data.py  test_validate.py
tier3/: __init__.py  clamp.py  encode.py  pipeline.py  send.py  validate.py
training/: train_lora.py
(+20 files in other folders)
