[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm4osc"
version = "0.1.0"
description = "Natural language to validated Open Sound Control (OSC)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "python-osc>=1.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
llm = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.27",
]

[project.scripts]
llm4osc = "llm4osc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm4osc*", "tier3*"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
pythonpath = ["."]
markers = [
    "llm: tests that load Qwen (set LLM4OSC_RUN_LLM=1)",
]
